# MeanFlowNFT

./: .gitignore  LICENSE  README.md  inference.py  main.py  pyproject.toml  requirements.txt
configs/anyflow/: sd35m_anyflow_onpolicy.yaml  sd35m_anyflow_pretrain.yaml
configs/inference/: sd35m_meanflow_nft.yaml  wan2.1_t2v_1.3b.yaml
configs/meanflow_nft/: sd35m_meanflow_nft.yaml  wan2.1_t2v_1.3b_meanflow_nft.yaml
dataset/hpsv3/: test.txt
dataset/vbench/: README.md
dataset/wan_dancegrpo/: test.txt  train.txt
meanflownft/: __init__.py  config.py  inference.py
meanflownft/data/: __init__.py  latent_prompt_dataset.py  prompt_dataset.py
meanflownft/eval/: __init__.py  vbench_eval.py
meanflownft/models/: sd35.py  sd35_flowmap.py  wan.py  wan_transformer.py
meanflownft/parallel/: utils.py
meanflownft/rewards/: __init__.py  aesthetic_scorer.py  clip_scorer.py  geneval2_scorer.py  hpsv2_scorer.py  hpsv3_scorer.py  imagereward_scorer.py  multi_scorer.py  ocr_scorer.py  pickscore_scorer.py  reward_ckpt_path.py  video_multi_scorer.py  video_utils.py
meanflownft/schedulers/: __init__.py  flowmap_scheduler.py
meanflownft/trainers/: anyflow_onpolicy_trainer.py  anyflow_pretrain_trainer.py  base_trainer.py  meanflow_nft_trainer.py  nft_trainer.py  nft_utils.py  wan_meanflow_nft_trainer.py
meanflownft/utils/: checkpoint.py  fast_init.py  image.py  logging.py  lora.py
scripts/: generate_consistency_data.py  generate_sd35_consistency_data.sh  inference_meanflow_nft_steps.sh  inference_wan_meanflow_nft_steps.sh  train_sd35_anyflow_onpolicy.sh  train_sd35_anyflow_pretrain.sh  train_sd35_meanflow_nft.sh  train_wan_meanflow_nft.sh
